save general ide settings during export settings